# plugins

./: .gitignore  LICENSE.md  README.md
cad/: README.md  go.mod  (+3 more)
cad/worker/: pyproject.toml
cad/worker/mcad/: __init__.py  ast_nodes.py  build123d_compat.py  edge_numbering.py  evaluator.py  glsl_compiler.py  lexer.py  parser.py  translator.py
cad/worker/mcad/tests/: test_edge_numbering.py  test_edge_tags.py  test_glsl_compiler.py  test_lexer.py  test_parser.py  test_translator.py
cad/worker/mcad_worker/: __main__.py  dispatcher.py  framing.py  methods.py
cad/worker/tests/: test_dispatcher.py  test_worker_smoke.py
scansort/: .gitignore  Cargo.toml  README.md  manifest.json
scansort/experiments/b8_doc_type/: .gitignore  harness.py  probe.py  probe_extract.py
scansort/experiments/b8_doc_type/rules/: boat.json  tax.json  utility.json
scansort/src/: audit.rs  checklists.rs  classifier.rs  crypto.rs  db.rs  dedup.rs  destination.rs  destinations.rs  doc_type_normalizer.rs  documents.rs  extract.rs  fingerprints.rs  library.rs  main.rs  migrate.rs  placement.rs  process.rs  registry.rs  render.rs  reprocess.rs  rule_engine.rs  rules.rs  rules_file.rs  schema.rs  session.rs  source.rs  source_state.rs  stage_walker.rs  types.rs  vault_lifecycle.rs
scansort/ui/: ScansortPanel.gd  ScansortPanel.tscn  add_document_dialog.gd  checklist_dialog.gd  dedup_disposition_dialog.gd  dryrun_result_dialog.gd  edit_details_dialog.gd  extract_target_dialog.gd  file_tree.gd  password_dialog.gd  password_dialog.tscn  paste_json_dialog.gd  recovery_sheet_dialog.gd  rules_editor_dialog.gd  rules_pane.gd  scan_tree.gd  scan_tree_area_provider.gd  scan_tree_destination_provider.gd  scan_tree_disk_provider.gd  scan_tree_provider.gd  scan_tree_source_provider.gd  scan_tree_vault_provider.gd  settings_dialog.gd  status_panel.gd  ui_scale.gd  vault_registry_dialog.gd  vault_view.gd
(+46 files in other folders)
