[package]
name = "scansort-plugin"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "scansort-plugin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Vault storage + crypto
rusqlite = { version = "0.39", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
