[project]
name = "cad-plugin-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "build123d>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["mcad/tests", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcad_worker", "mcad"]
